# floe

./: .ghlobes.toml  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  install.sh  milky-kit.toml  osv-scanner.toml  package.json  pnpm-lock.yaml  release-notes.md
.cargo/: config.toml
.claude/: .managed  milky-kit.toml  settings.local.json
.github/: dependabot.yml  release-please-config.json  release-please-manifest.json
crates/floe-cli/: Cargo.toml
crates/floe-cli/src/: main.rs
crates/floe-core/: Cargo.toml
crates/floe-core/src/: analyse.rs  build.rs  checker.rs  codegen.rs  cst.rs  desugar.rs  diagnostic.rs  exhaustiveness.rs  formatter.rs  interop.rs  lexer.rs  lib.rs  line_numbers.rs  lower.rs  lsp.rs  parse.rs  parser.rs  pretty.rs  reference.rs  resolve.rs  sourcemap.rs  syntax.rs  type_layout.rs  walk.rs
crates/floe-core/src/checker/: attach.rs  environment.rs  error_codes.rs  expr.rs  hydrator.rs  imports.rs  items.rs  match_check.rs  prelude.rs  printer.rs  problems.rs  tests.rs  traits.rs  type_compat.rs  type_registration.rs  type_resolve.rs  type_var.rs  types.rs  unify.rs
crates/floe-core/src/codegen/: dts.rs  expr.rs  items.rs  jsx.rs  match_emit.rs  parse_mock.rs  pipes.rs  tests.rs  types.rs  typescript.rs
crates/floe-core/src/codegen/typescript/: dts.rs  expression.rs  generator.rs  jsx.rs  match_emit.rs  parse_mock.rs  pipes.rs  statement.rs  types.rs
crates/floe-core/src/cst/: exprs.rs  items.rs  jsx.rs  types.rs
crates/floe-core/src/formatter/: expr.rs  items.rs  jsx.rs  tests.rs
crates/floe-core/src/interop/: ambient.rs  dts.rs  tests.rs  ts_types.rs  tsgo.rs  tsgo_lsp.rs  wrapper.rs
crates/floe-core/src/interop/tsgo/: probe_gen.rs  specifier_map.rs  typeof_resolve.rs
crates/floe-core/src/lexer/: span.rs  token.rs
crates/floe-core/src/lower/: expr.rs  items.rs  jsx.rs  pattern.rs  types.rs
crates/floe-core/src/lsp/: completions.rs  handlers.rs  stdlib_hover.rs  tests.rs
crates/floe-core/src/parse/: extra.rs
crates/floe-core/src/parser/: ast.rs  tests.rs
crates/floe-core/src/stdlib/: array.rs  bool.rs  console.rs  date.rs  http.rs  json.rs  map.rs  math.rs  mod.rs  number.rs  option.rs  pipe.rs  promise.rs  record.rs  regex.rs  result.rs  set.rs  string.rs  url.rs  url_search_params.rs
crates/floe-core/tests/: snapshot_codegen.rs  snapshot_errors.rs
crates/floe-core/tests/fixtures/: array_patterns.fl  collect.fl  constructors.fl  dot_shorthand.fl  for_blocks.fl  functions.fl  hello.fl  imports.fl  jsx_comment.fl  jsx_component.fl  jsx_member_expr.fl  match_expr.fl  match_option.fl  partial_application.fl  pipe_unwrap.fl  pipes.fl  positional_variants.fl  record_spread.fl  reexport.fl  result_option.fl  stdlib.fl  string_patterns.fl  structural_equality.fl  todo_unreachable.fl  traits.fl  trusted_import.fl  try_expr.fl  tuples.fl  types.fl  unicode_escapes.fl  unit_type.fl
crates/floe-core/tests/fixtures/errors/: banned_null.fl  banned_void.fl  trait_missing_method.fl  trait_unknown.fl
crates/floe-core/tests/snapshots/: snapshot_codegen__snapshot_jsx_component.snap  snapshot_codegen__snapshot_jsx_member_expr.snap  snapshot_codegen__snapshot_match_expr.snap  snapshot_codegen__snapshot_match_option.snap  snapshot_codegen__snapshot_partial_application.snap  snapshot_codegen__snapshot_pipe_unwrap.snap  snapshot_codegen__snapshot_positional_variants.snap  snapshot_codegen__snapshot_stdlib.snap  snapshot_codegen__snapshot_trait_constrained_generics.snap  snapshot_codegen__snapshot_trait_constrained_generics_cross_file.snap  snapshot_codegen__snapshot_traits.snap  snapshot_codegen__snapshot_trusted_import.snap  snapshot_codegen__snapshot_types.snap  snapshot_errors__snapshot_error_banned_let.snap  snapshot_errors__snapshot_error_banned_null.snap  snapshot_errors__snapshot_error_banned_void.snap  snapshot_errors__snapshot_error_exported_missing_return_type.snap  snapshot_errors__snapshot_error_field_access_on_unknown_from_bad_annotation.snap  snapshot_errors__snapshot_error_member_access_on_non_record_type.snap  snapshot_errors__snapshot_error_missing_return.snap  snapshot_errors__snapshot_error_no_cascade_from_invalid_field_access.snap  snapshot_errors__snapshot_error_no_cascade_from_undefined_name.snap  snapshot_errors__snapshot_error_passing_unknown_to_typed_param.snap  snapshot_errors__snapshot_error_string_concat.snap  snapshot_errors__snapshot_error_todo_warning.snap  snapshot_errors__snapshot_error_trait_method_param_type_mismatch.snap  snapshot_errors__snapshot_error_trait_method_return_type_mismatch.snap  snapshot_errors__snapshot_error_trait_missing_method.snap  snapshot_errors__snapshot_error_trait_unknown.snap  snapshot_errors__snapshot_error_trait_used_as_parameter_type.snap  snapshot_errors__snapshot_error_trait_used_as_return_type.snap  snapshot_errors__snapshot_error_trait_used_in_const_annotation.snap  snapshot_errors__snapshot_error_type_mismatch_comparison.snap  snapshot_errors__snapshot_error_undefined_type_in_annotation.snap  snapshot_errors__snapshot_error_unhandled_result.snap  snapshot_errors__snapshot_error_unknown_named_argument.snap  snapshot_errors__snapshot_error_untrusted_import.snap  snapshot_errors__snapshot_error_untrusted_result_used_as_value.snap  snapshot_errors__snapshot_error_unused_variable.snap
crates/floe-doc-check/: Cargo.toml
crates/floe-doc-check/src/: extract.rs  extract_astro.rs  lib.rs  main.rs
crates/floe-lsp/: Cargo.toml
crates/floe-lsp/src/: code_actions.rs  completion.rs  completions.rs  goto_def.rs  handlers.rs  hover.rs  index.rs  lib.rs  rename.rs  resolution.rs  stdlib_hover.rs  symbols.rs  tests.rs
crates/floe-test-helpers/: Cargo.toml
crates/floe-test-helpers/src/: lib.rs
crates/floe-wasm/: Cargo.toml
crates/floe-wasm/src/: lib.rs
docs/: design.md  llms.txt
scripts/: test-lsp.py
src/: checker.rs  codegen.rs  cst.rs  desugar.rs  formatter.rs  interop.rs  lexer.rs  lib.rs  lower.rs  lsp.rs  main.rs  parser.rs  resolve.rs  stdlib.rs  syntax.rs  type_layout.rs  walk.rs
tests/: snapshot_codegen.rs  (+1 more)
(+280 files in other folders)
