[workspace]
members = [
    "crates/floe-core",
    "crates/floe-cli",
    "crates/floe-doc-check",
    "crates/floe-lsp",
    "crates/floe-test-helpers",
    "crates/floe-wasm",
]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.5" # x-release-please-version
edition = "2024"
license = "MIT"
repository = "https://github.com/floeorg/floe"

[workspace.dependencies]
anyhow = "1"
ariadne = "0.6"
clap = { version = "4", features = ["derive"] }
notify = "8"
oxc_allocator = "0.126.0"
oxc_ast = "0.126.0"
oxc_parser = "0.126.0"
oxc_span = "0.126.0"
rowan = "0.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.52.0", features = ["full"] }
tower-lsp = "0.20.0"
insta = "1.47.2"

[workspace.lints.clippy]
# ── Style ──
collapsible_if = "deny"
collapsible_else_if = "deny"
needless_bool = "deny"
needless_return = "deny"
redundant_else = "deny"
manual_let_else = "deny"
unnested_or_patterns = "deny"
single_match_else = "deny"
fn_params_excessive_bools = "deny"
struct_excessive_bools = "deny"

# ── Complexity ──
cognitive_complexity = "deny"
too_many_lines = "deny"
match_same_arms = "deny"

# ── Code quality (pedantic) ──
redundant_closure = "deny"
needless_pass_by_value = "deny"
wildcard_imports = "deny"
manual_string_new = "deny"
uninlined_format_args = "deny"
needless_continue = "deny"
cast_lossless = "deny"
explicit_iter_loop = "deny"
unused_self = "deny"
unnecessary_wraps = "deny"
match_wildcard_for_single_variants = "deny"

# CI profile: drop opt-level overrides so compile is fast.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = 0

[profile.ci.package."*"]
opt-level = 0
debug = 0
