[package]
name = "floe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Floe compiler core: lexer, parser, type checker, codegen"
publish = false

[lib]
name = "floe_core"
path = "src/lib.rs"

[features]
# Enables native-only functionality: process spawning (tsgo probe), tempfile.
# Default-on so `cargo test` and CLI builds get full functionality.
# floe-wasm opts out via default-features=false (WASM can't spawn processes).
default = ["native"]
native = ["dep:tempfile"]

[dependencies]
ariadne.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
rowan.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true
