[package]
name = "floe-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM build of the Floe compiler for browser usage"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
floe-core = { path = "../floe-core", default-features = false }
wasm-bindgen = "0.2"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
